@@ -218,62 +218,57 @@ function showChunk( $namespace = NS_MAIN, $from, $including = false ) {
 
 	$sk = $wgUser->getSkin();
 
-	$fromTitle = null;
-	if ($from!="") {
-		$fromTitle = Title::newFromURL( $from );
-		if (!$fromTitle) {
-			return;
+	$fromList = $this->getNamespaceKeyAndText($namespace, $from);
+
+	if ( !$fromList ) {
+		$out = wfMsgWikiHtml( 'badtitletext' );
+	} else {
+		list( $namespace, $fromKey, $from ) = $fromList;
+
+		$dbr =& wfGetDB( DB_SLAVE );
+		$res = $dbr->select( 'page',
+			array( 'page_namespace', 'page_title', 'page_is_redirect' ),
+			array(
+				'page_namespace' => $namespace,
+				'page_title >= ' . $dbr->addQuotes( $fromKey )
+			),
+			$fname,
+			array(
+				'ORDER BY'  => 'page_title',
+				'LIMIT'     => $this->maxPerPage + 1,
+				'USE INDEX' => 'name_title',
+			)
+		);
+
+		### FIXME: side link to previous
+
+		$n = 0;
+		$out = '<table style="background: inherit;" border="0" width="100%">';
+
+		$namespaces = $wgContLang->getFormattedNamespaces();
+		while( ($n < $this->maxPerPage) && ($s = $dbr->fetchObject( $res )) ) {
+			$t = Title::makeTitle( $s->page_namespace, $s->page_title );
+			if( $t ) {
+				$link = ($s->page_is_redirect ? '<div class="allpagesredirect">' : '' ) .
+					$sk->makeKnownLinkObj( $t, htmlspecialchars( $t->getText() ), false, false ) .
+					($s->page_is_redirect ? '</div>' : '' );
+			} else {
+				$link = '[[' . htmlspecialchars( $s->page_title ) . ']]';
+			}
+			if( $n % 3 == 0 ) {
+				$out .= '<tr>';
+			}
+			$out .= "<td>$link</td>";
+			$n++;
+			if( $n % 3 == 0 ) {
+				$out .= '</tr>';
+			}
 		}
-		$fromNS = $fromTitle->getNamespace();
-		if ($namespace == NS_MAIN)
-			$namespace = $fromNS;
-	}
-	$fromKey = is_null( $fromTitle ) ? '' : $fromTitle->getDBkey();
-
-	$dbr =& wfGetDB( DB_SLAVE );
-	$res = $dbr->select( 'page',
-		array( 'page_namespace', 'page_title', 'page_is_redirect' ),
-		array(
-			'page_namespace' => $namespace,
-			'page_title >= ' . $dbr->addQuotes( $fromKey )
-		),
-		$fname,
-		array(
-			'ORDER BY'  => 'page_title',
-			'LIMIT'     => $this->maxPerPage + 1,
-			'USE INDEX' => 'name_title',
-		)
-	);
-
-	### FIXME: side link to previous
-
-	$n = 0;
-	$out = '<table style="background: inherit;" border="0" width="100%">';
-
-	$namespaces = $wgContLang->getFormattedNamespaces();
-	while( ($n < $this->maxPerPage) && ($s = $dbr->fetchObject( $res )) ) {
-		$t = Title::makeTitle( $s->page_namespace, $s->page_title );
-		if( $t ) {
-			$link = ($s->page_is_redirect ? '<div class="allpagesredirect">' : '' ) .
-				$sk->makeKnownLinkObj( $t, htmlspecialchars( $t->getText() ), false, false ) .
-				($s->page_is_redirect ? '</div>' : '' );
-		} else {
-			$link = '[[' . htmlspecialchars( $s->page_title ) . ']]';
-		}
-		if( $n % 3 == 0 ) {
-			$out .= '<tr>';
-		}
-		$out .= "<td>$link</td>";
-		$n++;
-		if( $n % 3 == 0 ) {
+		if( ($n % 3) != 0 ) {
 			$out .= '</tr>';
 		}
+		$out .= '</table>';
 	}
-	if( ($n % 3) != 0 ) {
-		$out .= '</tr>';
-	}
-	$out .= '</table>';
-
 
 	if ( $including ) {
 		$out2 = '';
@@ -284,7 +279,7 @@ function showChunk( $namespace = NS_MAIN, $from, $including = false ) {
 		$out2 .= '</td><td align="right" style="font-size: smaller; margin-bottom: 1em;">' .
 				$sk->makeKnownLink( $wgContLang->specialPage( "Allpages" ),
 					wfMsgHtml ( 'allpages' ) );
-		if ( ($n == $this->maxPerPage) && ($s = $dbr->fetchObject( $res )) ) {
+		if ( $dbr && ($n == $this->maxPerPage) && ($s = $dbr->fetchObject( $res )) ) {
 			$namespaceparam = $namespace ? "&namespace=$namespace" : "";
 			$out2 .= " | " . $sk->makeKnownLink(
 				$wgContLang->specialPage( "Allpages" ),
@@ -295,6 +290,32 @@ function showChunk( $namespace = NS_MAIN, $from, $including = false ) {
 	}
 
 	$wgOut->addHtml( $out2 . $out );
+}
+	
+/**
+ * @param int $ns the namespace of the article
+ * @param string $text the name of the article
+ * @return array( int namespace, string dbkey, string pagename ) or NULL on error
+ * @static (sort of)
+ * @access private
+ */
+function getNamespaceKeyAndText ($ns, $text) {
+	if ( $text == '' )
+		return array( $ns, '', '' ); # shortcut for common case
+
+	$t = Title::makeTitleSafe($ns, $text);
+	if ( $t && $t->isLocal() )
+		return array( $t->getNamespace(), $t->getDBkey(), $t->getText() );
+	else if ( $t )
+		return NULL;
+
+	# try again, in case the problem was an empty pagename
+	$text = preg_replace('/(#|$)/', 'X$1', $text);
+	$t = Title::makeTitleSafe($ns, $text);
+	if ( $t && $t->isLocal() )
+		return array( $t->getNamespace(), '', '' );
+	else
+		return NULL;
 }
 }
 
